update SqlTemplates